<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Loot:</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="move_right">Right</string>
    <string name="move_left">Left</string>
    <string name="move_down">Down</string>
    <string name="move_up">Up</string>
    <string name="tv_loot">Loot:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="tv_timer">Timer:</string>
</resources>
